Migrate CCF Core from Java 8 to Java 25 and JUnit 5
Mechanical stack migration, driven by OpenRewrite. Tests unchanged: 21 run,
0 failures, 0 errors on JDK 25, same as the JDK 8 baseline.

Recipes (see rewrite.yml, which is the authoritative record):
  com.collabnet.ccf.UpgradeToJava21WithoutSwitchRewrites
    = org.openrewrite.java.migrate.UpgradeToJava21 minus its six
      if/else-if-to-switch sub-recipes
  org.openrewrite.java.migrate.UpgradeBuildToJava25
  org.openrewrite.java.migrate.UpgradePluginsForJava25
  org.openrewrite.java.migrate.MigrateZipErrorToZipException
  org.openrewrite.java.testing.junit5.JUnit4to5Migration

101 source files touched. What the recipes actually changed:
  - source/target 1.6 -> 25
  - JUnit 4 (15 files) and JUnit 3 (7 files) -> Jupiter: @Test/@BeforeEach/
    @AfterEach, org.junit.Assert -> org.junit.jupiter.api.Assertions with the
    message argument moved last, junit.framework.TestCase subclasses unwrapped
  - InstanceOfPatternMatch: ~90 `(Cast) x` after `instanceof` -> pattern variables
  - SequencedCollection: List.get(0)/get(size()-1) -> getFirst()/getLast()
  - AddSerialAnnotationToSerialVersionUID: 27 @Serial annotations
  - dependencies: guava r09 -> 29.0-jre, commons-codec 1.3 -> 1.17.2,
    com.sun.xml.bind:jaxb-impl 2.2.3 -> org.glassfish.jaxb:jaxb-runtime 2.3.9,
    junit 4.8.2 -> junit-jupiter 5.14.4, added com.sun.xml.ws:jaxws-rt 2.3.7
  - plugins: maven-compiler-plugin 3.13.0 -> 3.15.0

Three things the recipes could not do, done by hand:

1. JEP 320. javax.xml.ws (SWP Connection) and javax.xml.bind are no longer in
   the JDK, and the OpenRewrite forked lifecycle cannot even parse the project
   until they resolve, so jakarta.xml.ws-api and jakarta.xml.bind-api 2.3.3 are
   declared explicitly. 2.3.x deliberately: those artifacts still carry the
   javax.* package names, which the vendored ScrumWorks SOAP stubs require.
   source/target also had to be raised 1.6 -> 8 first, since javac 17 (needed to
   run the re