@@ -133,7 +133,7 @@ public class ClientArtifact {
         if (values == null) {
             return null;
         }
-        return (String) values.get(0);
+        return (String) values.getFirst();
     }
 
     /**
